--- a/notebooks/exploratory/example.ipynb
+++ b/notebooks/exploratory/example.ipynb
@@ -35,6 +35,24 @@
    "id": "2",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "data = np.random.randn(500)\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.hist(data)\n",
+    "plt.title(\"Histogram\")\n",
+    "plt.xlabel(\"Value\")\n",
+    "plt.ylabel(\"Frequency\")\n",
+    "\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
